[package]
name = "deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.7.2", features = ["cuda"] }
candle-kernels = "0.7.2"
candle-nn = "0.7.2"
itertools = "0.13.0"
anyhow = "1.0.92"
rand = "0.8.5"